--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "olive-cli",
+  "version": "1.0.0",
   "maintainers": [
     "Nijat Muzaffarli"
   ],
   "module": "index.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/glockx/olive.git"
+  },
   "type": "module",
-  "version": "1.0.0",
   "private": false,
   "devDependencies": {
     "@types/bun": "latest",
