--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "command-line",
     "image generator",
     "dummy image",
-    "placeholder"
+    "placeholder",
+    "placeholder generator"
   ],
   "main": "build/index.js",
   "module": "index.ts",
